--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,14 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.meta
+Assets/Standard Assets
+Temp
+ProjectSettings
+Library
+
+
+TimeTable.xlsx
+Assets/Editor/CrossPlatformInputInitialize.cs
+Assets/Editor/InputAxisScrollbarCI.cs
+Assets/Note about Editor Folder.txt
